--- a/src/app/style/settings.scss
+++ b/src/app/style/settings.scss
@@ -2,6 +2,6 @@
 
 html {
     // 100vw = 1440px, 1px = 0.0625vw
-    font-size: 0.069444vw;
-    // font-size: 1px;
+    // font-size: 0.069444vw;
+    font-size: 1px;
 }
